Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
   <i class="fa-solid fa-wrench"></i> ToolsV1
 </a>
 </li>
-<a href="toolsV2.html" class="btn-tools" target="_self">
+<a href="menu2.html" class="btn-tools" target="_self">
   <i class="fa-solid fa-wrench"></i> ToolsV2
 </a>
 </li>
-<a href="toolsV3.html" class="btn-tools" target="_self">
+<a href="menu3.html" class="btn-tools" target="_self">
   <i class="fa-solid fa-wrench"></i> ToolsV3
 </a>
 </li>
@@ -463,3 +463,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
